@@ -1,4 +1,5 @@
 2.2.6
+ * (cqlsh) Support timezone conversion using pytz (CASSANDRA-10000)
  * Always persist upsampled index summaries (CASSANDRA-10512)
  * (cqlsh) Fix inconsistent auto-complete (CASSANDRA-10733)
  * Make SELECT JSON and toJson() threadsafe (CASSANDRA-11048)
